Fix wrapping and transitions

--- a/src/styles.css
+++ b/src/styles.css
@@ -45,15 +45,19 @@ body {
 }
 
 .card-container {
-  display: flexbox;
-
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  flex-wrap: wrap;
   padding: 50px;
 }
 
 .card {
   display: flex;
   flex-direction: column;
+
   background-color: var(--background-1);
+  border-radius: 10px;
 
   text-align: center;
 
@@ -62,6 +66,12 @@ body {
 
   padding: 10px;
   margin: 20px;
+
+  transition: all 0.2s linear;
+}
+
+.card:hover {
+  transform: scale(1.3);
 }
 
 .card__menubutton {
@@ -71,6 +81,8 @@ body {
 .card__label {
   font-size: 1.5em;
   margin: 20px;
+
+  overflow: scroll;
 }
 
 .card__count {
@@ -86,4 +98,9 @@ body {
 
 .card__button {
   width: 100%;
+
+  font-size: 1.4em;
+
+  width: 80px;
+  height: 50px;
 }
